  free the result of history_get_history_state()).

- Issue #9450: Fix memory leak in readline.replace_history_item and
  readline.remove_history_item for readline version >= 5.0.

- Issue #8105: Validate file descriptor passed to mmap.mmap on Windows.

- Issue #8046: Add context manager protocol support and .closed property
  to mmap objects.

Library
-------

- Issue #658749: asyncore's connect() method now correctly interprets winsock
  errors;

- Issue #9501: Fixed logging regressions in cleanup code.

- Fix functools.total_ordering() to actually work.

- Issue #9572: Importlib should not raise an exception if a directory it
  thought it needed to create was done concurrently by another process.

- Issue #9617: Signals received during a low-level write operation aren't
  ignored by the buffered IO layer anymore.

- Issue #843590: Make "macintosh" an alias to the "mac_roman" encoding.

- Create os.fsdecode(): decode from the filesystem encoding with
  surrogateescape error handler, or strict error handler on Windows.

- Issue #3488: Provide convenient shorthand functions ``gzip.compress``
  and ``gzip.decompress``.  Original patch by Anand B. Pillai.

- Issue #8807: poplib.POP3_SSL class now accepts a context parameter, which is a
  ssl.SSLContext object allowing bundling SSL configuration options,
  certificates and private keys into a single (potentially long-lived)
  structure.

- Issue #8866: parameters passed to socket.getaddrinfo can now be specified as
  single keyword arguments.

- Address XXX comment in dis.py by having inspect.py prefer to reuse the
  dis.py compiler flag values over defining its own

- Issue #9147: Added dis.code_info() which is similar to show_code()
  but returns formatted code information in a string rather than
  displaying on screen.

- Issue #9567: functools.update_wrapper now adds a __wrapped__ attribute
  pointing to the original callable

- Issue #3445: functools.update_wrapper now tolerates missing attributes